Fixed a float overlap issue by clearing right on the banner.

--- a/BeTheEagle/styles/swag.css
+++ b/BeTheEagle/styles/swag.css
@@ -64,6 +64,7 @@ body{
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	top: 0;
+	clear: right;
 	left: 0;
 	min-width: 100%;
 	min-height: 80px;
